Fix toolbar overlap if location is selected

--- a/src/app/geocoder/geocoder.component.css
+++ b/src/app/geocoder/geocoder.component.css
@@ -23,10 +23,11 @@
 }
 
 mat-form-field {
-  width: 100%;
+  flex-grow: 10;
 }
 
 .currentLocation {
+  flex-grow: 1;
   display: flex;
   align-items: center;
   line-height: 1.5em;
@@ -39,4 +40,5 @@ mat-form-field {
 
 .geocoder {
   height: 3em;
+  display: flex;
 }
